# jugglerr

./: README.md  pyproject.toml
docs/: MODEL_LIST.md
juggler/: version.py
